layout issues, main content translations

--- a/src/components/seatChart/SeatChart.scss
+++ b/src/components/seatChart/SeatChart.scss
@@ -10,7 +10,9 @@
 .seat-chart .row {
   flex-wrap: nowrap;
   margin: 10px 0px;
+  justify-content: center;
 }
+
 .right-of-middle-rows {
   margin-top: 30px !important;
 }
